# agentic-research-assistant

./: .env.example  .gitignore  Dockerfile  README.md  debug_baidu.py  docker-compose.yml  pyproject.toml  test_baidu.py  test_phase1.py
app/: __main__.py  config.py  main.py
app/agent/: graph.py  state.py
app/agent/nodes/: executor.py  generator.py  planner.py  reflector.py
app/api/: __init__.py  routes.py  schemas.py
app/memory/: chroma_store.py  session.py
app/tools/: fetch.py  pdf_parser.py  search.py
docs/: optimization-plan.md  user-guide.md  自主式研究助手_AgenticRAG可执行方案.md
frontend/: app.py
tests/: test_config.py  test_integration.py  test_state.py
