[project]
name = "agentic-research-assistant"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    # Agent 框架
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",

    # 搜索（无 API Key，国内畅通）
    "baidusearch>=1.0.0",

    # 爬取
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "markdownify>=0.14",

    # 配置
    "pydantic-settings>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",

    # PDF 解析
    "PyMuPDF>=1.25",

    # 后端（Phase 4）
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    # 前端（Phase 5）
    "streamlit>=1.40",

    # 日志 & 限流（Phase 6）
    "loguru>=0.7",
    "slowapi>=0.1",

    # CLI
    "rich>=13.0",
]

[project.optional-dependencies]
full = [
    # 向量库（Phase 3 需要）
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["app"]
